# myorobotics_ros

./: README.md
myo_control/: 4Muscles.urdf  CMakeLists.txt  ethercat_device_plugin.xml  package.xml
myo_control/include/myo_control/: sr_spi_myo.hpp
myo_control/launch/: 4muscles.launch  4muscles_with_controllers.launch
myo_control/src/: sr_spi_myo.cpp
myo_controllers/: CMakeLists.txt  controllers_plugins.xml  package.xml
myo_controllers/include/myo_controllers/: ExampleController.h
myo_controllers/src/: ExampleController.cpp
myo_interface/: CMakeLists.txt  package.xml
myo_interface/include/myo_interface/: myoMuscleJointInterface.h
myo_interface/src/: myoMuscleJointInterface.cpp
